--- a/index.html
+++ b/index.html
@@ -4,10 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>image</title>
+    <title>Application form</title>
 </head>
 <body>
-    <h1>nature</h1>
-    <img src="/nature.jfif">
+    <h1>Application form</h1>
+    <form>
+        <label>Name :</label><input type="text" placeholder="enter name"></br>
+        <label>DOB:</label><input type="date" ></br>
+        <label>Gender : </label><input type="radio" name="gender" value="male">male
+        <input type="radio" name="gender" value="female">female </br>
+        <label>email :</label><input type="text" placeholder="enter email"></br>
+        <label>Department:</label><input type= "text"></form></br>
+    </form>
+    
 </body>
 </html>
