--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <input type="radio" name="gender" value="female">female </br>
         <label>email :</label><input type="text" placeholder="enter email"></br>
         <label>Department:</label><input type= "text"></form></br>
+        <label></label><input type="submit" value ="submit">
     </form>
     
 </body>
