--- a/index.html
+++ b/index.html
@@ -14,8 +14,16 @@
         <label>Gender : </label><input type="radio" name="gender" value="male">male
         <input type="radio" name="gender" value="female">female </br>
         <label>email :</label><input type="text" placeholder="enter email"></br>
-        <label>Department:</label><input type= "text"></form></br>
-        <label></label><input type="submit" value ="submit">
+        <label>Department:</label><select>
+            <option name="dept" value="ECE"selected>ECE</option>
+            <option name="dept" value="Mech">Mech</option>
+            <option name="dept" value="EEE">EEE</option>
+            <option name="dept" value="CSE">CSE</option> 
+            <option name="dept" value="Civil">Civil</option>
+        </select></br>
+        <label>Comments: </label><textarea>welcome!!!</textarea></br>
+        <label>upload resume</label><input type="file"></br>
+        <input type="submit" value="submit">  <input type="reset">     
     </form>
     
 </body>
